@@ -1,0 +1,50 @@
+<?xml version="1.0" standalone="no"?>
+<!DOCTYPE translation-status SYSTEM "translation-status.dtd" >
+
+<translation-status>
+  <server id="CVS-GNOME" hostname="cvs.gnome-db.org:/cvs/gnome" />
+
+  <module name="anjuta">
+    <version name="ANJUTA_1_0_0" id="ANJUTA_1_0_0" path="anjuta" server="CVS-GNOME" />
+    <version name="ANJUTA_1_2_0" id="ANJUTA_1_2_0" path="anjuta" server="CVS-GNOME" />
+  </module>
+  <module name="balsa">
+    <version name="balsa-1-4" id="balsa-1-4" path="balsa" server="CVS-GNOME" />
+    <version name="balsa-HEAD" id="HEAD" path="balsa" server="CVS-GNOME" />
+  </module>
+  <module name="galeon">
+    <version name="galeon-1-2" id="galeon-1-2" path="galeon" server="CVS-GNOME" />
+    <version name="galeon-HEAD" id="HEAD" path="galeon" server="CVS-GNOME" />
+  </module>
+  <module name="gimp">
+    <version name="gimp-1-2" id="gimp-1-2" path="gimp" server="CVS-GNOME" />
+    <version name="gimp-HEAD" id="HEAD" path="gimp" server="CVS-GNOME" />
+  </module>
+  <module name="gimp-freetype">
+    <version name="gimp-freetype-1-2" id="gimp-1-2" path="gimp-freetype" server="CVS-GNOME" />
+    <version name="gimp-freetype-HEAD" id="HEAD" path="gimp-freetype" server="CVS-GNOME" />
+  </module>
+  <module name="gimp-gap">
+    <version name="gimp-gap-HEAD" id="HEAD" path="gimp-gap" server="CVS-GNOME" />
+  </module>
+  <module name="guikachu">
+    <version name="guikachu-HEAD" id="HEAD" path="guikachu" server="CVS-GNOME" />
+    <version name="guikachu-gnome-2-branch" id="guikachu-gnome-2-branch" path="guikachu" server="CVS-GNOME" />
+  </module>
+  <module name="pybliographer">
+    <version name="pybliographer-HEAD" id="HEAD" path="pybliographer" server="CVS-GNOME" />
+  </module>
+  
+  <view name="gnome-1.4">
+    <group name="GNOME 1.4 Extras" >
+      <versionrefs name="ANJUTA_1_0_0" />
+      <versionrefs name="balsa-1-4" />
+      <versionrefs name="galeon-1-2" />
+      <versionrefs name="gimp-1-2" />
+      <versionrefs name="gimp-freetype-1-2" />
+      <versionrefs name="guikachu-HEAD" />
+      <versionrefs name="pybliographer-HEAD" />
+    </group>
+  </view>
+  
+</translation-status>
