@@ -1,3 +1,9 @@
+2003-08-03  Carlos Perelló Marín <carlos@gnome.org>
+
+	* src/status.h, src/status-xml.c: The new xml parser module.
+	* src/status-view.c: Added support for groups.
+	* data/status-gnome.xml: Added an example for the new .xml file format
+	
 2003-07-27  Carlos Perelló Marín <carlos@gnome.org>
 
 	* src/status-view.[ch]: Added the view object.
